--- a/training.html
+++ b/training.html
@@ -177,22 +177,6 @@ permalink: /training/
                 <div class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="https://sybiltec.com/images/events/TB-03-Developing-a-Digital-Marketing-Strategy-940-492.png" alt="Developing a Digital Marketing Strategy">
-                        </div>
-                        <div class="col-7">
-                            <h3>Developing a Digital Marketing Strategy</h3>
-                            <p><strong>📅 Thursday 16th October 2025, 11am-12pm BST</strong></p>
-                            <p>Marketing your business effectively is an essential step for gaining exposure to the right audience and to start making sales. Join our free webinar to learn how to develop a marketing strategy for your business.</p>
-                            <div class="padding-btn">
-                                <a class ="btn-primary" href="https://www.eventbrite.co.uk/e/developing-a-digital-marketing-strategy-free-via-zoom-tickets-1381827195339" target="_blank" rel="noopener noreferrer">Register Now</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="shadow-box-2">
-                    <div class="row-2">
-                        <div class="col-5">
                             <img src="https://sybiltec.com/images/events/start-up-wandsworth-crafting-perfect-website-small-business.jpg" alt="Crafting the Perfect Website for Your Small Business">
                         </div>
                         <div class="col-7">
@@ -238,11 +222,32 @@ permalink: /training/
                     </div>
                 </div>
 
-                <h2>Past Workshops</h2>
-                    <div class="row">
+                <h2>Past Webinars</h2>
+                <p>I am a regular guest speaker on webinars hosted by <a href="https://www.cntassociates.com" target="_blank" rel="noopener noreferrer">CNT Associates</a>, where we present on various topics ranging from the basics of getting your business online, to setting up an e-commerce store with Shopify.</p>
+
+                <div class="row-2">
+                    <div class="col-5">
+                        <img src="https://sybiltec.com/images/events/TB-03-Developing-a-Digital-Marketing-Strategy-940-492.png" alt="Developing a Digital Marketing Strategy">
+                    </div>
+                    <div class="col-7">
+                        <p>Marketing your business effectively is an essential step for gaining exposure to the right audience and to start making sales. Learn how to develop a marketing strategy for your business. Originally presented on 16 October 2025.</p>
+                        <div class="padding-top padding-bottom"><a class="btn-secondary" href="https://youtu.be/ThlWLB60eK8" target="_blank" rel="noopener noreferrer">Digital Marketing</a></div></div>
+                </div>
+
+                <div class="row">
                     <div class="col-5"><div><img src="https://sybiltec.com/images/events/FC-01-Online-Wellbeing-for-Women-Over-40-October-2025-940x492.png" style="width:100%; max-width:560px;" alt="E-commerce deep dive: selling your products online"></div></div>
                     <div class="col-7"><p>On 02 October 2025, I presented a 1-hour webinar entitled <em>Online Wellbeing for Women Over 40</em>. Learn tools and techniques to reset your online habits, and build confidence to utilise the Internet as a source of inspiration and creativity, rather than information overload.</p><div class="padding-top padding-bottom"><a class="btn-secondary" href="https://youtu.be/Og8hhIgtOe8" target="_blank" rel="noopener noreferrer">Online Wellbeing</a></div></div>
                 </div>
+
+                <div class="row">
+                    <div class="col-5"><div style="max-width: 560px; margin-left: auto; margin-right: auto;"><div class="videoWrapper"><iframe width="560" height="315" src="https://www.youtube.com/embed/yvgcLTRAAro" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                </div>
+                </div>
+                    <div class="col-7">
+                    <p>🔐 Watch the recording of our recent webinar, <em>Cyber Security Basics: Protecting Your Business in a Digital World</em>.</p></div>
+                </div>
+
+                <h2>Past Workshops</h2>
 
                 <div class="row">
                     <div class="col-5"><div><img src="https://sybiltec.com/images/e-commerce-deep-dive-selling-your-products-online.jpg" style="width:100%; max-width:560px;" alt="E-commerce deep dive: selling your products online"></div></div>
@@ -266,16 +271,6 @@ permalink: /training/
                 <div class="row">
                     <div class="col-5"><div><img src="https://sybiltec.com/images/start-up-bromley-business-week.png" style="width:100%; max-width:560px;" alt="Start Up Bromley Business Week. Workshops and events running Monday 14th March - Saturday 19th March"></div></div>
                     <div class="col-7"><p>In March 2022, as part of Start Up Bromley Business Week, I presented a 2-hour in-person workshop entitled <em>E-commerce Deep Dive: Selling Your Products Online</em>.</p><div class="padding-top padding-bottom"><a class="btn-secondary" href="https://www.eventbrite.co.uk/e/business-week-day-1-e-commerce-deep-dive-selling-your-products-online-tickets-272059095077" target="_blank" rel="noopener noreferrer">E-commerce Deep Dive</a></div></div>
-                </div>
-                
-                <h2>Webinars</h2>
-
-                <div class="row">
-                    <div class="col-5"><div style="max-width: 560px; margin-left: auto; margin-right: auto;"><div class="videoWrapper"><iframe width="560" height="315" src="https://www.youtube.com/embed/yvgcLTRAAro" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-                </div>
-                </div>
-                    <div class="col-7"><p>I am a regular guest speaker on webinars hosted by <a href="https://www.cntassociates.com" target="_blank" rel="noopener noreferrer">CNT Associates</a>, where we present on various topics ranging from the basics of getting your business online, to setting up an e-commerce store with Shopify.</p>
-                    <p>🔐 Watch the recording of our recent webinar, <em>Cyber Security Basics: Protecting Your Business in a Digital World</em>.</p></div>
                 </div>
                 
             </div>
