--- a/training.html
+++ b/training.html
@@ -177,22 +177,6 @@ permalink: /training/
                 <div class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="https://sybiltec.com/images/events/start-up-wandsworth-crafting-perfect-website-small-business.jpg" alt="Crafting the Perfect Website for Your Small Business">
-                        </div>
-                        <div class="col-7">
-                            <h3>Crafting the Perfect Website for Your Small Business</h3>
-                            <p><strong>📅 Thursday 23rd October 2025, 11am-1pm BST</strong></p>
-                            <p>Attend this in-person workshop to learn how to create a professional, high-converting website with expert tips on design, UX, SEO, and online sales strategies.</p>
-                            <div class="padding-btn">
-                                <a class ="btn-primary" href="https://www.eventbrite.co.uk/e/crafting-the-perfect-website-for-your-small-business-tickets-1589629176659" target="_blank" rel="noopener noreferrer">Register Now</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="shadow-box-2">
-                    <div class="row-2">
-                        <div class="col-5">
                             <img src="https://sybiltec.com/images/events/TB-04-Support-for-Women-Led-Businesses-940x492.png" alt="Support for Women-Led Businesses">
                         </div>
                         <div class="col-7">
@@ -250,27 +234,34 @@ permalink: /training/
                 <h2>Past Workshops</h2>
 
                 <div class="row">
+                        <div class="col-5">
+                            <img src="https://sybiltec.com/images/events/start-up-wandsworth-crafting-perfect-website-small-business.jpg" alt="Crafting the Perfect Website for Your Small Business">
+                        </div>
+                        <div class="col-7">
+                            <p>On Thursday 23 October 2025, I delivered <em>Crafting the Perfect Website for Your Small Business</em> at Putney Library. Attendees learnt how to create a professional, high-converting website with expert tips on design, UX, SEO, and online sales strategies. This workshop was organised by Start Up Wandsworth.</p>
+                        </div>
+                </div>
+
+                <div class="row">
                     <div class="col-5"><div><img src="https://sybiltec.com/images/e-commerce-deep-dive-selling-your-products-online.jpg" style="width:100%; max-width:560px;" alt="E-commerce deep dive: selling your products online"></div></div>
-                    <div class="col-7"><p>On 09 July 2024, I presented a 2-hour in-person workshop entitled <em>E-commerce Deep Dive: Selling Your Products Online</em>. This workshop was organised by Start Up Greenwich.</p><div class="padding-top padding-bottom"><a class="btn-secondary" href="https://www.eventbrite.co.uk/e/e-commerce-deep-dive-selling-your-products-online-tickets-899935169317" target="_blank" rel="noopener noreferrer">E-commerce Deep Dive</a></div></div>
+                    <div class="col-7"><p>On 09 July 2024, I presented a 2-hour in-person workshop entitled <em>E-commerce Deep Dive: Selling Your Products Online</em>. This workshop was organised by Start Up Greenwich.</p></div>
                 </div>
 
                 <div class="row">
                     <div class="col-5"><div><img src="https://sybiltec.com/images/sybil-mayard-gary-parker-at-british-library.jpg" style="width:100%; max-width:560px;" alt="Sybil Mayard and Gary Parker at the British Library"></div></div>
-                    <div class="col-7"><p>On 25 April 2023, Gary Parker and I delivered our popular in-person workshop, <em>Funding and Opportunities for E-commerce</em>.</p>
-                        <div class="padding-top padding-bottom"><a class="btn-secondary" href="https://www.eventbrite.co.uk/e/funding-and-opportunities-for-e-commerce-free-live-event-tickets-566384680827" target="_blank" rel="noopener noreferrer">Funding and Opportunities for E-commerce</a></div>
+                    <div class="col-7"><p>On 25 April 2023, Gary Parker and I delivered our popular in-person workshop, <em>Funding and Opportunities for E-commerce</em> at the British Library.</p>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-5"><div><img src="https://sybiltec.com/images/sybil-mayard-consultant-conquering-social-media-day.jpg" style="width:100%; max-width:560px;" alt="Sybil Mayard, consultant at Conquering Social Media Day"></div></div>
                     <div class="col-7"><p>In March 2023, as part of Start Up Business Week 2023, I participated in <em>Conquering Social Media Day</em> as a Consultant, advising small businesses on a 1-2-1 basis on how to improve the design of their website.</p>
-                        <div class="padding-top padding-bottom"><a class="btn-secondary" href="https://www.eventbrite.com/e/conquering-social-media-day-tickets-539198997717" target="_blank" rel="noopener noreferrer">Conquering Social Media Day</a></div>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-5"><div><img src="https://sybiltec.com/images/start-up-bromley-business-week.png" style="width:100%; max-width:560px;" alt="Start Up Bromley Business Week. Workshops and events running Monday 14th March - Saturday 19th March"></div></div>
-                    <div class="col-7"><p>In March 2022, as part of Start Up Bromley Business Week, I presented a 2-hour in-person workshop entitled <em>E-commerce Deep Dive: Selling Your Products Online</em>.</p><div class="padding-top padding-bottom"><a class="btn-secondary" href="https://www.eventbrite.co.uk/e/business-week-day-1-e-commerce-deep-dive-selling-your-products-online-tickets-272059095077" target="_blank" rel="noopener noreferrer">E-commerce Deep Dive</a></div></div>
+                    <div class="col-7"><p>In March 2022, as part of Start Up Bromley Business Week, I presented a 2-hour in-person workshop entitled <em>E-commerce Deep Dive: Selling Your Products Online</em>. This workshop was organised by Start Up Bromley.</p></div>
                 </div>
                 
             </div>
