--- a/index.html
+++ b/index.html
@@ -371,14 +371,14 @@
                         <img src="images/logos/low-res/designrush-verified-agency.webp" alt="Designrush.com verified agency">
                     </div>
                     <div class="col-2">
-                        <a href="https://www.fsb.org.uk/" target="_blank" rel="noreferrer noopener"><img src="images/logos/low-res/FSB_Member_Logo_Dark_Blue.webp" alt="Visit FSB's website"></a>
-                    </div>
-                    <div class="col-2">
                         <a href="https://partnernetwork.ionos.co.uk/partner/sybiltec?origin=PartnerBadge" rel="noreferrer noopener" target="_blank">
                         <img src="images/logos/ionos-agency-partner-official.svg" alt="IONOS - Official Partner"></a>
                     </div>
                     <div class="col-2">
                         <img src="images/logos/low-res/klaviyo-partner-badge.webp" alt="Klaviyo Partner">
+                    </div>
+                    <div class="col-2">
+                        <a href="https://crmbyrsm.com/" target="_blank" rel="noreferrer noopener"><img src="images/logos/low-res/rsm-consulting-llc.webp" alt="RSM Consulting LLC"></a>
                     </div>
                     <div class="col-2">
                         <img src="images/logos/low-res/Shopify_Logo_Monotone_White.webp" alt="Shopify">
