--- a/training.html
+++ b/training.html
@@ -177,22 +177,6 @@ permalink: /training/
                 <div class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="https://sybiltec.com/images/events/TB-04-Support-for-Women-Led-Businesses-940x492.png" alt="Support for Women-Led Businesses">
-                        </div>
-                        <div class="col-7">
-                            <h3>Support for Women-Led Businesses</h3>
-                            <p><strong>📅 Thursday 6th November 2025, 11am-12pm GMT</strong></p>
-                            <p>This free Zoom webinar will cover a number of issues relevant to women-led businesses including funding, leadership and management issues, and wellbeing/work-life balance.</p>
-                            <div class="padding-btn">
-                                <a class ="btn-primary" href="https://www.eventbrite.co.uk/e/support-for-women-led-businesses-free-via-zoom-tickets-1381828158219" target="_blank" rel="noopener noreferrer">Register Now</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="shadow-box-2">
-                    <div class="row-2">
-                        <div class="col-5">
                             <img src="https://sybiltec.com/images/events/TB-05-AI-for-Beginners-940x492.png" alt="AI for Beginners">
                         </div>
                         <div class="col-7">
@@ -211,23 +195,40 @@ permalink: /training/
 
                 <div class="row-2">
                     <div class="col-5">
+                        <img src="https://sybiltec.com/images/events/TB-04-Support-for-Women-Led-Businesses-940x492.png" alt="Support for Women-Led Businesses">
+                    </div>
+                    <div class="col-7">
+                        <h3>Support for Women-Led Businesses</h3>
+                        <p>This free Zoom webinar covers a number of issues relevant to women-led businesses including funding, leadership and management issues, and wellbeing/work-life balance. Originally presented on 6 November 2025.</p>
+                        <div class="padding-top padding-bottom">
+                            <a class ="btn-secondary" href="https://youtu.be/fpAWx3FD9bs" target="_blank" rel="noopener noreferrer">Support for Women-Led Businesses</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row-2">
+                    <div class="col-5">
                         <img src="https://sybiltec.com/images/events/TB-03-Developing-a-Digital-Marketing-Strategy-940-492.png" alt="Developing a Digital Marketing Strategy">
                     </div>
                     <div class="col-7">
+                        <h3>Developing a Digital Marketing Strategy</h3>
                         <p>Marketing your business effectively is an essential step for gaining exposure to the right audience and to start making sales. Learn how to develop a marketing strategy for your business. Originally presented on 16 October 2025.</p>
-                        <div class="padding-top padding-bottom"><a class="btn-secondary" href="https://youtu.be/ThlWLB60eK8" target="_blank" rel="noopener noreferrer">Digital Marketing</a></div></div>
+                        <div class="padding-top padding-bottom"><a class="btn-secondary" href="https://youtu.be/ThlWLB60eK8" target="_blank" rel="noopener noreferrer">Digital Marketing</a></div>
+                    </div>
                 </div>
 
                 <div class="row">
                     <div class="col-5"><div><img src="https://sybiltec.com/images/events/FC-01-Online-Wellbeing-for-Women-Over-40-October-2025-940x492.png" style="width:100%; max-width:560px;" alt="E-commerce deep dive: selling your products online"></div></div>
-                    <div class="col-7"><p>On 02 October 2025, I presented a 1-hour webinar entitled <em>Online Wellbeing for Women Over 40</em>. Learn tools and techniques to reset your online habits, and build confidence to utilise the Internet as a source of inspiration and creativity, rather than information overload.</p><div class="padding-top padding-bottom"><a class="btn-secondary" href="https://youtu.be/Og8hhIgtOe8" target="_blank" rel="noopener noreferrer">Online Wellbeing</a></div></div>
+                    <div class="col-7"><h3>Online Wellbeing for Women Over 40</h3>
+                        <p>On 02 October 2025, I presented a 1-hour webinar entitled <em>Online Wellbeing for Women Over 40</em>. Learn tools and techniques to reset your online habits, and build confidence to utilise the Internet as a source of inspiration and creativity, rather than information overload.</p><div class="padding-top padding-bottom"><a class="btn-secondary" href="https://youtu.be/Og8hhIgtOe8" target="_blank" rel="noopener noreferrer">Online Wellbeing</a></div></div>
                 </div>
 
                 <div class="row">
-                    <div class="col-5"><div style="max-width: 560px; margin-left: auto; margin-right: auto;"><div class="videoWrapper"><iframe width="560" height="315" src="https://www.youtube.com/embed/yvgcLTRAAro" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                    <div class="col-5"><div style="max-width: 560px; margin-left: auto; margin-right: auto;"><div class="videoWrapper"><iframe width="560" height="315" src="https://www.youtube.com/embed/yvgcLTRAAro?si=HuLW7ko2ZmkUwm1L" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
                 </div>
                 </div>
                     <div class="col-7">
+                        <h3>Cyber Security Basics</h3>
                     <p>🔐 Watch the recording of our recent webinar, <em>Cyber Security Basics: Protecting Your Business in a Digital World</em>.</p></div>
                 </div>
 
@@ -238,30 +239,31 @@ permalink: /training/
                             <img src="https://sybiltec.com/images/events/start-up-wandsworth-crafting-perfect-website-small-business.jpg" alt="Crafting the Perfect Website for Your Small Business">
                         </div>
                         <div class="col-7">
+                            <h3>Crafting the Perfect Website for Your Small Business</h3>
                             <p>On Thursday 23 October 2025, I delivered <em>Crafting the Perfect Website for Your Small Business</em> at Putney Library. Attendees learnt how to create a professional, high-converting website with expert tips on design, UX, SEO, and online sales strategies. This workshop was organised by Start Up Wandsworth.</p>
                         </div>
                 </div>
 
                 <div class="row">
                     <div class="col-5"><div><img src="https://sybiltec.com/images/e-commerce-deep-dive-selling-your-products-online.jpg" style="width:100%; max-width:560px;" alt="E-commerce deep dive: selling your products online"></div></div>
-                    <div class="col-7"><p>On 09 July 2024, I presented a 2-hour in-person workshop entitled <em>E-commerce Deep Dive: Selling Your Products Online</em>. This workshop was organised by Start Up Greenwich.</p></div>
+                    <div class="col-7"><h3>E-commerce Deep Dive: Selling Your Products Online</h3><p>On 09 July 2024, I presented a 2-hour in-person workshop entitled <em>E-commerce Deep Dive: Selling Your Products Online</em>. This workshop was organised by Start Up Greenwich.</p></div>
                 </div>
 
                 <div class="row">
                     <div class="col-5"><div><img src="https://sybiltec.com/images/sybil-mayard-gary-parker-at-british-library.jpg" style="width:100%; max-width:560px;" alt="Sybil Mayard and Gary Parker at the British Library"></div></div>
-                    <div class="col-7"><p>On 25 April 2023, Gary Parker and I delivered our popular in-person workshop, <em>Funding and Opportunities for E-commerce</em> at the British Library.</p>
+                    <div class="col-7"><h3>Funding & Opportunities for E-commerce</h3><p>On 25 April 2023, Gary Parker and I delivered our popular in-person workshop, <em>Funding and Opportunities for E-commerce</em> at the British Library.</p>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-5"><div><img src="https://sybiltec.com/images/sybil-mayard-consultant-conquering-social-media-day.jpg" style="width:100%; max-width:560px;" alt="Sybil Mayard, consultant at Conquering Social Media Day"></div></div>
-                    <div class="col-7"><p>In March 2023, as part of Start Up Business Week 2023, I participated in <em>Conquering Social Media Day</em> as a Consultant, advising small businesses on a 1-2-1 basis on how to improve the design of their website.</p>
+                    <div class="col-7"><h3>Conquering Social Media Day</h3><p>In March 2023, as part of Start Up Business Week 2023, I participated in <em>Conquering Social Media Day</em> as a Consultant, advising small businesses on a 1-2-1 basis on how to improve the design of their website.</p>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-5"><div><img src="https://sybiltec.com/images/start-up-bromley-business-week.png" style="width:100%; max-width:560px;" alt="Start Up Bromley Business Week. Workshops and events running Monday 14th March - Saturday 19th March"></div></div>
-                    <div class="col-7"><p>In March 2022, as part of Start Up Bromley Business Week, I presented a 2-hour in-person workshop entitled <em>E-commerce Deep Dive: Selling Your Products Online</em>. This workshop was organised by Start Up Bromley.</p></div>
+                    <div class="col-7"><h3>E-commerce Deep Dive: Selling Your Products Online</h3><p>In March 2022, as part of Start Up Bromley Business Week, I presented a 2-hour in-person workshop entitled <em>E-commerce Deep Dive: Selling Your Products Online</em>. This workshop was organised by Start Up Bromley.</p></div>
                 </div>
                 
             </div>
