--- a/privacy-notice.html
+++ b/privacy-notice.html
@@ -174,7 +174,7 @@ permalink: /privacy-notice/
                 <h2>Our contact details</h2>
                 <p>Name: Sybiltec Web Design</p>
                 <p>Email: <a href="mailto:privacy@sybiltec.com" target="_blank">privacy@sybiltec.com</a></p>
-                <p>Address: The Engine House, 2 Veridion Way, Erith DA18 4AL</p>
+                <p>Address:</p>
                 <h2>The type of personal information we collect</h2>
                 <p>We may collect, use, store or transfer different kinds of personal data about you when you use our website or when you receive services or communication from us.</p>
 
@@ -330,7 +330,7 @@ permalink: /privacy-notice/
                 </div>
             </div>
             <div class="copyright section center">
-                <p>Copyright &copy;<span id="year"></span> Sybiltec. ICO registration reference: ZB744424. The Engine House, 2 Veridion Way, Erith DA18 4AL</p>
+                <p>Copyright &copy;<span id="year"></span> Sybiltec. ICO registration reference: ZB744424.</p>
             </div>
         </div>
         <script>
