--- a/backup-wordpress-website-using-updraftplus.html
+++ b/backup-wordpress-website-using-updraftplus.html
@@ -310,7 +310,7 @@ permalink: /backup-wordpress-website-using-updraftplus/
                 </div>
             </div>
             <div class="copyright section center">
-                <p>Copyright &copy;<span id="year"></span> Sybiltec. ICO registration reference: ZB744424. The Engine House, 2 Veridion Way, Erith DA18 4AL</p>
+                <p>Copyright &copy;<span id="year"></span> Sybiltec. ICO registration reference: ZB744424.</p>
             </div>
         </div>
         <script>
