--- a/best-free-wordpress-plugins.html
+++ b/best-free-wordpress-plugins.html
@@ -303,7 +303,7 @@ permalink: /best-free-wordpress-plugins/
                 </div>
             </div>
             <div class="copyright section center">
-                <p>Copyright &copy;<span id="year"></span> Sybiltec. ICO registration reference: ZB744424. The Engine House, 2 Veridion Way, Erith DA18 4AL</p>
+                <p>Copyright &copy;<span id="year"></span> Sybiltec. ICO registration reference: ZB744424.</p>
             </div>
         </div>
         <script>
