--- a/blog-3.html
+++ b/blog-3.html
@@ -277,7 +277,7 @@ permalink: /blog-3/
                 </div>
             </div>
             <div class="copyright section center">
-                <p>Copyright &copy;<span id="year"></span> Sybiltec. ICO registration reference: ZB744424. The Engine House, 2 Veridion Way, Erith DA18 4AL</p>
+                <p>Copyright &copy;<span id="year"></span> Sybiltec. ICO registration reference: ZB744424.</p>
             </div>
         </div>
         <script>
