--- a/case-study-template.html
+++ b/case-study-template.html
@@ -248,7 +248,7 @@ permalink: /client-name/
                 </div>
             </div>
             <div class="copyright section center">
-                <p>Copyright &copy;<span id="year"></span> Sybiltec. ICO registration reference: ZB744424. The Engine House, 2 Veridion Way, Erith DA18 4AL</p>
+                <p>Copyright &copy;<span id="year"></span> Sybiltec. ICO registration reference: ZB744424.</p>
             </div>
         </div>
         <script>
