--- a/google-search-console.html
+++ b/google-search-console.html
@@ -374,7 +374,7 @@ permalink: /google-search-console/
                 </div>
             </div>
             <div class="copyright section center">
-                <p>Copyright &copy;<span id="year"></span> Sybiltec. ICO registration reference: ZB744424. The Engine House, 2 Veridion Way, Erith DA18 4AL</p>
+                <p>Copyright &copy;<span id="year"></span> Sybiltec. ICO registration reference: ZB744424.</p>
             </div>
         </div>
         <script>
