--- a/how-does-a-good-website-showcase-trust.html
+++ b/how-does-a-good-website-showcase-trust.html
@@ -278,7 +278,7 @@ permalink: /how-does-a-good-website-showcase-trust/
                 </div>
             </div>
             <div class="copyright section center">
-                <p>Copyright &copy;<span id="year"></span> Sybiltec. ICO registration reference: ZB744424. The Engine House, 2 Veridion Way, Erith DA18 4AL</p>
+                <p>Copyright &copy;<span id="year"></span> Sybiltec. ICO registration reference: ZB744424.</p>
             </div>
         </div>
         <script>
