--- a/how-to-choose-web-designer.html
+++ b/how-to-choose-web-designer.html
@@ -339,7 +339,7 @@ permalink: /how-to-choose-web-designer/
                 </div>
             </div>
             <div class="copyright section center">
-                <p>Copyright &copy;<span id="year"></span> Sybiltec. ICO registration reference: ZB744424. The Engine House, 2 Veridion Way, Erith DA18 4AL</p>
+                <p>Copyright &copy;<span id="year"></span> Sybiltec. ICO registration reference: ZB744424.</p>
             </div>
         </div>
         <script>
