--- a/importance-of-contact-information-on-your-website.html
+++ b/importance-of-contact-information-on-your-website.html
@@ -294,7 +294,7 @@ permalink: /importance-of-contact-information-on-your-website/
                 </div>
             </div>
             <div class="copyright section center">
-                <p>Copyright &copy;<span id="year"></span> Sybiltec. ICO registration reference: ZB744424. The Engine House, 2 Veridion Way, Erith DA18 4AL</p>
+                <p>Copyright &copy;<span id="year"></span> Sybiltec. ICO registration reference: ZB744424.</p>
             </div>
         </div>
         <script>
