--- a/website-compliance-quick-guide.html
+++ b/website-compliance-quick-guide.html
@@ -329,7 +329,7 @@ permalink: /website-compliance-quick-guide/
         </div>
     </div>
     <div class="copyright section center">
-                <p>Copyright &copy;<span id="year"></span> Sybiltec. ICO registration reference: ZB744424. The Engine House, 2 Veridion Way, Erith DA18 4AL</p>
+                <p>Copyright &copy;<span id="year"></span> Sybiltec. ICO registration reference: ZB744424.</p>
             </div>
 </div>
 <script>
