--- a/website-compliance-quick-guide.html
+++ b/website-compliance-quick-guide.html
@@ -75,8 +75,8 @@ permalink: /website-compliance-quick-guide/
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
         <meta name="geo.region" content="GB" />
         <meta name="geo.placename" content="London" />
-        <meta name="geo.position" content="51.495673;0.141465" />
-        <meta name="ICBM" content="51.495673, 0.141465" />
+        <meta name="geo.position" content="51.48376;0.1755" />
+        <meta name="ICBM" content="51.48376, 0.1755" />
         <script type="application/ld+json">
         {
         "@context": "https://schema.org",
@@ -85,16 +85,16 @@ permalink: /website-compliance-quick-guide/
         "name": "Sybiltec Web Design",
         "address": {
             "@type": "PostalAddress",
-            "streetAddress": "2 Veridion Way",
+            "streetAddress": "42 West Street",
             "addressLocality": "Erith",
             "addressRegion": "London",
-            "postalCode": "DA18 4AL",
+            "postalCode": "DA8 1AF",
             "addressCountry": "GB"
         },
         "geo": {
             "@type": "GeoCoordinates",
-            "latitude": 51.495673,
-            "longitude": 0.141465
+            "latitude": 51.48376,
+            "longitude": 0.1755
         },
         "url": "https://sybiltec.com",
         "telephone": "+447768059730",
@@ -110,7 +110,7 @@ permalink: /website-compliance-quick-guide/
                 "Friday"
             ],
             "opens": "09:00",
-            "closes": "18:00"
+            "closes": "17:00"
             }
         ]
         }
@@ -121,7 +121,7 @@ permalink: /website-compliance-quick-guide/
         "@type": "Organization",
         "image": "https://sybiltec.com/images/logos/sybiltec-logo-social.png",
         "url": "https://www.sybiltec.com",
-        "sameAs": ["https://uk.pinterest.com/sybiltec/", "https://www.facebook.com/sybiltec", "https://www.linkedin.com/company/sybiltec/", "https://x.com/sybiltec", "https://www.instagram.com/sybiltec", "https://www.youtube.com/@sybiltec"],
+        "sameAs": ["https://uk.pinterest.com/sybiltec/", "https://www.linkedin.com/company/sybiltec/", "https://x.com/sybiltec", "https://www.youtube.com/@sybiltec"],
         "logo": "https://sybiltec.com/favicon.png",
         "name": "Sybiltec Web Design",
         "description": "Sybiltec provides web design services to small businesses in the South East London region and surrounding areas. Whether you are looking to build your first website or redesign an existing one, we offer a service that's right for you. Services include: small business websites, e-commerce websites and online learning platforms. We work with Shopify, WordPress, Wix, WooCommerce and LearnDash.",
@@ -129,11 +129,11 @@ permalink: /website-compliance-quick-guide/
         "telephone": "+447768059730",
         "address": {
             "@type": "PostalAddress",
-            "streetAddress": "2 Veridion Way",
+            "streetAddress": "42 West Street",
             "addressLocality": "Erith",
             "addressCountry": "GB",
             "addressRegion": "London",
-            "postalCode": "DA18 4AL"
+            "postalCode": "DA8 1AF"
         }
         }
         </script>
